# Teloxide-Plugins

./: Cargo.toml  README.md
examples/: bot.rs
examples/plugs/: callback.rs  echo.rs  hello_regex.rs  mod.rs  ping.rs
src/: context.rs  lib.rs  registry.rs
teloxide-plugins-macros/: Cargo.toml
teloxide-plugins-macros/src/: lib.rs
